feat: Get transactions
